# Notes_generator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/ai_notes_generator/: ai_service.py  auth_service.py  config.py  db.py  main.py  pdf_utils.py
test/: test_ai.py  test_auth.py  test_db_connection.py
